Removed book structure from public repository.

--- a/graphic.tex
+++ b/graphic.tex
@@ -2,7 +2,7 @@
 \usepackage{tikz}
 \usetikzlibrary{calc,arrows.meta,shapes.misc,decorations.pathmorphing,backgrounds,positioning,fit}
 
-
+%graphic for ORI-Book
 
 \begin{document}
 
