Weichen auf 0.5cm, nicht schoen

--- a/graphic.tex
+++ b/graphic.tex
@@ -16,6 +16,7 @@
 
 \begin{document}
 
+\def\weichenabstand{.5}
 \begin{tikzpicture}
 [
 chptr/.style={rectangle, fill=green!5, below=1em, minimum width = 4cm, text width=3.8cm, align=left}, 
@@ -72,21 +73,24 @@ topic/.style={rectangle, minimum width = 4cm, below = 2.2cm, inner sep = 3pt},
 		
 	\end{scope}
 	
+	
+	
 	\coordinate (tactin) at ($(tact.west) + (0,0)$);
 	\coordinate (stratin) at ($(strat.west) + (0,0)$);
 	\coordinate (opin) at ($(op.west) + (0,0)$);
 	
 	\coordinate (blockin) at ($ (block.east) - (3pt,0) $);
-	\coordinate (blockout) at ($ (block.east) + (1,0) $);
+	\coordinate (blockout) at ($ (block.east) + (.5,0) $);
 	
 	\coordinate (shuntin) at ($(shu.east) + (-3pt,0)$);
-	\coordinate (shuntout) at ($(shu.east) + (1,0)$);
+	\coordinate (shuntout) at ($(shu.east) + (.5,0)$);
 	
 	\coordinate (cscdin) at ($(cscd.east) + (-3pt,0)$);
-	\coordinate (cscdout) at ($(cscd.east) +(1,0)$);
+	\coordinate (cscdout) at ($(cscd.east) +(.5,0)$);
 	
-	\coordinate (rostoout) at ($(rosto.east) +(1,0)$);
 	\coordinate (rostoin) at ($(rosto.east) + (-6pt,0) $);
+	\coordinate (rostoout) at ($(rosto.east) +(.5,0)$);
+
 	
 	
 	
