manueller revert auf schoene 1cm weichen

--- a/graphic.tex
+++ b/graphic.tex
@@ -80,16 +80,16 @@ topic/.style={rectangle, minimum width = 4cm, below = 2.2cm, inner sep = 3pt},
 	\coordinate (opin) at ($(op.west) + (0,0)$);
 	
 	\coordinate (blockin) at ($ (block.east) - (3pt,0) $);
-	\coordinate (blockout) at ($ (block.east) + (.5,0) $);
+	\coordinate (blockout) at ($ (block.east) + (1,0) $);
 	
 	\coordinate (shuntin) at ($(shu.east) + (-3pt,0)$);
-	\coordinate (shuntout) at ($(shu.east) + (.5,0)$);
+	\coordinate (shuntout) at ($(shu.east) + (1,0)$);
 	
 	\coordinate (cscdin) at ($(cscd.east) + (-3pt,0)$);
-	\coordinate (cscdout) at ($(cscd.east) +(.5,0)$);
+	\coordinate (cscdout) at ($(cscd.east) +(1,0)$);
 	
 	\coordinate (rostoin) at ($(rosto.east) + (-6pt,0) $);
-	\coordinate (rostoout) at ($(rosto.east) +(.5,0)$);
+	\coordinate (rostoout) at ($(rosto.east) +(1,0)$);
 
 	
 	
